examples/failing/UIntOutOfRange.purs
-- @shouldFailWith UIntOutOfRange

module Main where

n :: UInt
n = 4294967296u
